// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepTimeField should render a loading state when creating the index pattern 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="m"
>
  <EuiFlexGroup
    alignItems="center"
    component="div"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiText>
        Creating index pattern...
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiLoadingSpinner />
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPanel>
`;

exports[`StepTimeField should render a selected timeField 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    indexPattern="ki*"
  />
  <EuiSpacer
    size="xs"
  />
  <TimeField
    fetchTimeFields={[Function]}
    onTimeFieldChanged={[Function]}
    selectedTimeField="@timestamp"
    showTimeField={true}
    timeFieldOptions={
      Array [
        Object {
          "text": "",
          "value": "",
        },
        Object {
          "isDisabled": undefined,
          "text": "@timestamp",
          "value": "@timestamp",
        },
        Object {
          "isDisabled": undefined,
          "text": "name",
          "value": "name",
        },
      ]
    }
    timeFields={
      Array [
        Object {
          "display": "@timestamp",
          "fieldName": "@timestamp",
        },
        Object {
          "display": "name",
          "fieldName": "name",
        },
      ]
    }
  />
  <EuiSpacer
    size="s"
  />
  <AdvancedOptions
    indexPatternId=""
    onChangeIndexPatternId={[Function]}
    showingAdvancedOptions={false}
    toggleAdvancedOptions={[Function]}
  />
  <EuiSpacer
    size="m"
  />
  <ActionButtons
    createIndexPattern={[Function]}
    submittable="@timestamp"
  />
</EuiPanel>
`;

exports[`StepTimeField should render advanced options 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    indexPattern="ki*"
  />
  <EuiSpacer
    size="xs"
  />
  <TimeField
    fetchTimeFields={[Function]}
    onTimeFieldChanged={[Function]}
    showTimeField={false}
    timeFieldOptions={
      Array [
        Object {
          "text": "",
          "value": "",
        },
      ]
    }
    timeFields={Array []}
  />
  <EuiSpacer
    size="s"
  />
  <AdvancedOptions
    indexPatternId=""
    onChangeIndexPatternId={[Function]}
    showingAdvancedOptions={true}
    toggleAdvancedOptions={[Function]}
  />
  <EuiSpacer
    size="m"
  />
  <ActionButtons
    createIndexPattern={[Function]}
    submittable={true}
  />
</EuiPanel>
`;

exports[`StepTimeField should render advanced options with an index pattern id 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    indexPattern="ki*"
  />
  <EuiSpacer
    size="xs"
  />
  <TimeField
    fetchTimeFields={[Function]}
    onTimeFieldChanged={[Function]}
    showTimeField={false}
    timeFieldOptions={
      Array [
        Object {
          "text": "",
          "value": "",
        },
      ]
    }
    timeFields={Array []}
  />
  <EuiSpacer
    size="s"
  />
  <AdvancedOptions
    indexPatternId="foobar"
    onChangeIndexPatternId={[Function]}
    showingAdvancedOptions={true}
    toggleAdvancedOptions={[Function]}
  />
  <EuiSpacer
    size="m"
  />
  <ActionButtons
    createIndexPattern={[Function]}
    submittable={true}
  />
</EuiPanel>
`;

exports[`StepTimeField should render normally 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    indexPattern="ki*"
  />
  <EuiSpacer
    size="xs"
  />
  <TimeField
    fetchTimeFields={[Function]}
    onTimeFieldChanged={[Function]}
    showTimeField={false}
    timeFieldOptions={
      Array [
        Object {
          "text": "",
          "value": "",
        },
      ]
    }
    timeFields={Array []}
  />
  <EuiSpacer
    size="s"
  />
  <AdvancedOptions
    indexPatternId=""
    onChangeIndexPatternId={[Function]}
    showingAdvancedOptions={false}
    toggleAdvancedOptions={[Function]}
  />
  <EuiSpacer
    size="m"
  />
  <ActionButtons
    createIndexPattern={[Function]}
    submittable={true}
  />
</EuiPanel>
`;

exports[`StepTimeField should render timeFields 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    indexPattern="ki*"
  />
  <EuiSpacer
    size="xs"
  />
  <TimeField
    fetchTimeFields={[Function]}
    onTimeFieldChanged={[Function]}
    showTimeField={true}
    timeFieldOptions={
      Array [
        Object {
          "text": "",
          "value": "",
        },
        Object {
          "isDisabled": undefined,
          "text": "@timestamp",
          "value": "@timestamp",
        },
        Object {
          "isDisabled": undefined,
          "text": "name",
          "value": "name",
        },
      ]
    }
    timeFields={
      Array [
        Object {
          "display": "@timestamp",
          "fieldName": "@timestamp",
        },
        Object {
          "display": "name",
          "fieldName": "name",
        },
      ]
    }
  />
  <EuiSpacer
    size="s"
  />
  <AdvancedOptions
    indexPatternId=""
    onChangeIndexPatternId={[Function]}
    showingAdvancedOptions={false}
    toggleAdvancedOptions={[Function]}
  />
  <EuiSpacer
    size="m"
  />
  <ActionButtons
    createIndexPattern={[Function]}
  />
</EuiPanel>
`;
